sam-internal/k8s-out/prd/prd-sam/casam-gateway-phase2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
    niko/fake.change.for.redeploy: "3"
  name: ingressgateway
  namespace: core-on-sam-sp2
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: https-8085
      number: 8085
      protocol: HTTPS
    tls:
      caCertificates: /server-certs/ca.pem
      mode: SIMPLE
      privateKey: /server-certs/server/keys/server-key.pem
      serverCertificate: /server-certs/server/certificates/server.pem
  - hosts:
    - '*'
    port:
      name: https-8443
      number: 8443
      protocol: HTTPS
    tls:
      caCertificates: /server-certs/ca.pem
      mode: SIMPLE
      privateKey: /server-certs/server/keys/server-key.pem
      serverCertificate: /server-certs/server/certificates/server.pem
  - hosts:
    - '*'
    port:
      name: tcp-secure-2525
      number: 2525
      protocol: TLS
    tls:
      caCertificates: /server-certs/ca.pem
      mode: SIMPLE
      privateKey: /server-certs/server/keys/server-key.pem
      serverCertificate: /server-certs/server/certificates/server.pem
